Moved grouping per boardgame to BoardGameCollection